vlib/v/scanner/tests/shebang_outside_vsh_err.out
vlib/v/scanner/tests/shebang_outside_vsh_err.vv:1:1: error: a shebang is only valid in *.vsh files
    1 | #!/usr/bin/env -S v
      | ^
