vlib/v/scanner/tests/shebang_outside_vsh_err.vv
#!/usr/bin/env -S v
